# fcos_trt_backend

./: .gitignore  CMakeLists.txt  ReadMe.md  package.xml
cmake/: Config.cmake  ModelGeneration.cmake  TestingSetup.cmake
include/fcos_torch_backend/: config.hpp  fcos_torch_backend.hpp
include/fcos_trt_backend/: coco_category_names.hpp  config.hpp  detection_types.hpp  detection_utils.hpp  exception.hpp  fcos_backbone.hpp  fcos_post_processor.hpp  fcos_trt_backend.hpp  fcos_types.hpp  head_types.hpp  normalize_kernel.hpp  post_processor.hpp  postprocessor.hpp  types.hpp
script/: convert_onnx_to_fp16.py  export_fcos_to_onnx.py  export_to_onnx.py  export_with_trtnms.py  fcos_object_detection.py  fcos_torch_detector.py  inference_test.py  insepct_onnx.py  onnx_postprocess_verify.py  onnx_postprocess_verify_bak.py  onnx_verify.py  onnx_verify_tmp.py  postprocessing_verify.py  postprocessing_verify_working.py  testing_fcos.py  testing_postprocess.py  tmp_onnx_verify.py  verify_exported_onnx.py
script/tmp/: postprocessing_verify_no_fall_verify.py  postprocessing_verify_with_onnx.py
src/: detection_utils.cpp  fcos_backbone.cpp  fcos_post_processor.cpp  fcos_torch_backend.cpp  fcos_trt_backend.cpp  main.cpp  main_bak.cpp  normalize_kernel.cu  post_processor.cpp  postprocessor.cpp
test/: postprocessing_verify.py  test_fcos_torch_backend.cpp  test_fcos_trt_backend.cpp  verify_export_fcos_to_onnx.py  verify_postprocessing.py
